# Tier-comparison

./: .gitignore  LICENSE.md  README.md  ReadWriteGoogleSheet.py  action.yml  githubissue.py  pseudo-code.md  pyproject.toml  readsheet.py  requirements.txt  sheetshuttle_pull.py  tier-comparison-b070681eb057.json  try2.py
.actions/checkout/: action.yml
.github/actions/checkout/: action.yml
.github/workflows/: main.yml
_Try1/: ReadWriteGoogleSheet.py  writesheet.py
_Try1/green/: commands-green.cmd
actions/hello-world-composite-action/: action.yml
config/: create_issues.yml  get_data.yml
config/actually_running/: create_issues.yml
plugin/: collect_files.py  github_issues.py  key.json  mustache_template.py  write_yaml.py
red/: commands-red.cmd
templates/: green_tier.md  red_tier.md  yellow_tier.md
tests/: test_tiers.py
yellow/: commands-yellow.cmd
